package com.designpatterns.factorymethod;

public interface LogPrinter {
    
    public void print(String message);
}
